# flask-tutorial

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  config.py  flask-tutorial-README.md  microblog.py  pyproject.toml
app/: __init__.py  errors.py  forms.py  models.py  routes.py
app/templates/: _post.html  forget_password.html  reset_password.html  user.html
migrations/: env.py
migrations/versions/: 37f06a334dbf_new_fields_in_user_model.py  780739b227a7_posts_table.py  e517276bb1c2_users_table.py
tests/: conftest.py  test_auth.py  test_models.py  test_routes.py
