[project]
name = "microblog"
version = "0.7.0"
description = "A Flask microblog app built through Chapter 7 of Miguel Grinberg's Flask Mega-Tutorial."
readme = "README.rst"
license = "BSD-3-Clause"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "email-validator",
    "flask",
    "flask-login",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-wtf",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
    "templates/*.html",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
filterwarnings = ["error"]
